clean unuse script and add data analysis.py

--- a/TopicModeling/bonds_analysis.ipynb
+++ b/TopicModeling/bonds_analysis.ipynb
@@ -2,48 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from compute_topic import *\n",
+    "from compute_lda import *\n",
     "from manage_path import *\n",
-    "from topic_model_analysis import *\n",
+    "#from topic_model_analysis import *\n",
     "\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = get_pickle_directory() / 'TRACE2014_jinming.pkl'\n",
-    "data = pd.read_pickle(data_path)"
+    "data = load_pickle(\"FINRA_TRACE_2015.pkl.zip\")\n",
+    "data = data.append(load_pickle(\"FINRA_TRACE_2014.pkl.zip\"),ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading LDAModel ....\n",
-      "LDAModel loaded!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Dc_v4 = load_model('Dc_v4',50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,33 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['TRD_RPT_DTTM', 'TRD_EXCTN_DTTM', 'TRC_ST', 'BOND_SYM_ID', 'CUSIP_ID',\n",
-       "       'SCRTY_TYPE_CD', 'ENTRD_VOL_QT', 'RPTD_PR', 'RPT_SIDE_CD',\n",
-       "       'Report_Dealer_Index', 'Contra_Party_Index', 'document_date',\n",
-       "       'ISSUER_ID', 'COMPLETE_CUSIP', 'AGENT_ID', 'CUSIP_NAME',\n",
-       "       'INDUSTRY_GROUP', 'INDUSTRY_CODE', 'PARENT_ID', 'NAICS_CODE',\n",
-       "       'SIC_CODE'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,38 +73,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
+   "outputs": [],
+   "source": [
+    "Dc_v4.get_topics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.49630045e-07, 8.44386837e-08, 9.09348487e-08, ...,\n",
-       "        3.11006248e-03, 8.44386926e-08, 8.44386812e-08],\n",
-       "       [3.67444783e-07, 3.67428298e-07, 3.67434128e-07, ...,\n",
-       "        3.38676723e-05, 3.67428017e-07, 3.67427963e-07],\n",
-       "       [5.87674544e-07, 5.87670577e-07, 6.19030223e-07, ...,\n",
-       "        5.87671458e-07, 5.87670513e-07, 9.35418546e-05],\n",
-       "       ...,\n",
-       "       [4.08965546e-07, 4.08951742e-07, 4.08957965e-07, ...,\n",
-       "        4.24124856e-07, 4.08951352e-07, 4.08951352e-07],\n",
-       "       [8.78721187e-08, 5.56796611e-05, 1.32270300e-04, ...,\n",
-       "        8.78670382e-08, 5.28273318e-05, 8.78623263e-08],\n",
-       "       [1.15831795e-07, 1.11899593e-07, 1.23272161e-07, ...,\n",
-       "        6.49945537e-07, 1.11828808e-07, 1.11828797e-07]])"
+       "' = (100, 2)'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Dc_v4.get_topics()"
+    "\" = {}\".format((100,2))"
    ]
   },
   {
@@ -157,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
