--- a/TopicModeling/plot_sankey.ipynb
+++ b/TopicModeling/plot_sankey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "\n",
     "from manage_path import *\n",
-    "from topic_model_analysis import *"
+    "from lda_analysis import *"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,18 +125,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sankey_array = [create_sankey_matrix(Dc_v4,x) for x in np.linspace(0,0.3,10)]"
+    "sankey_array = [create_sankey_matrix(Dc_v4,x) for x in np.linspace(0,0.2,5)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.  , 0.05, 0.1 , 0.15, 0.2 ])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0,0.2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(76642, 8)\n",
+      "(3274, 8)\n",
+      "(1545, 8)\n",
+      "(950, 8)\n",
+      "(645, 8)\n"
+     ]
+    }
+   ],
    "source": [
     "for sankey in sankey_array:\n",
     "    print(sankey.shape)"
@@ -144,9 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n",
+      "73\n",
+      "64\n",
+      "59\n",
+      "53\n"
+     ]
+    }
+   ],
    "source": [
     "for sankey in sankey_array:\n",
     "    print(sankey['topicID'].nunique())"
@@ -154,9 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "253\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "for sankey in sankey_array:\n",
     "    print(sankey.groupby(['topicID'])['dealer'].nunique().min())"
@@ -164,9 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "532\n",
+      "79\n",
+      "42\n",
+      "33\n",
+      "26\n"
+     ]
+    }
+   ],
    "source": [
     "for sankey in sankey_array:\n",
     "    print(sankey.groupby(['topicID'])['dealer'].nunique().max())"
@@ -174,9 +242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "401.08\n",
+      "21.84931506849315\n",
+      "11.625\n",
+      "7.932203389830509\n",
+      "5.9245283018867925\n"
+     ]
+    }
+   ],
    "source": [
     "for sankey in sankey_array:\n",
     "    print(sankey.groupby(['topicID'])['dealer'].nunique().mean())"
@@ -184,9 +264,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BfD    21798\n",
+      "StD    19826\n",
+      "StC    19137\n",
+      "BfC    15881\n",
+      "Name: B/S, dtype: int64\n",
+      "BfD    998\n",
+      "StD    890\n",
+      "StC    827\n",
+      "BfC    559\n",
+      "Name: B/S, dtype: int64\n",
+      "BfD    469\n",
+      "StD    405\n",
+      "StC    390\n",
+      "BfC    281\n",
+      "Name: B/S, dtype: int64\n",
+      "BfD    267\n",
+      "StC    249\n",
+      "StD    241\n",
+      "BfC    193\n",
+      "Name: B/S, dtype: int64\n",
+      "BfD    176\n",
+      "StC    168\n",
+      "StD    158\n",
+      "BfC    143\n",
+      "Name: B/S, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "for sankey in sankey_array:\n",
     "    print(sankey['B/S'].value_counts())"
@@ -264,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
